FilmService адаптирован под БД